Fix heading semantics and icon alignment (#169)

--- a/apps/frontend/static_src/scss/components/alert.scss
+++ b/apps/frontend/static_src/scss/components/alert.scss
@@ -20,6 +20,8 @@
     }
 
     &__icon {
+        display: flex;
+        align-items: center;
         margin-inline-end: ($gutter * 0.5);
         height: 20px;
     }
